--- a/Feature Extraction.ipynb
+++ b/Feature Extraction.ipynb
@@ -4,42 +4,29 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Actor_01', 'Actor_02', 'Actor_03', 'Actor_04', 'Actor_05', 'Actor_06', 'Actor_07', 'Actor_08', 'Actor_09', 'Actor_10', 'Actor_11', 'Actor_12', 'Actor_13', 'Actor_14', 'Actor_15', 'Actor_16', 'Actor_17', 'Actor_18', 'Actor_19', 'Actor_20', 'Actor_21', 'Actor_22', 'Actor_23', 'Actor_24', 'audio_speech_actors_01-24']\n"
-     ]
-    },
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'keras'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-4-56c894b8021d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mlibrosa\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpreprocessing\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msequence\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mpad_sequences\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     12\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0msklearn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmetrics\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mglob\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'keras'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import os\n",
-    "from scipy.io import wavfile as wav\n",
-    "print(os.listdir(r\"C:\\Users\\ratnd\\Desktop\\finalyr project\\ravdess\"))\n",
-    "import matplotlib.pyplot as plt\n",
-    "from IPython.display import Audio\n",
-    "from tqdm import tqdm\n",
-    "from sklearn.preprocessing import MultiLabelBinarizer\n",
-    "from scipy import signal\n",
-    "import numpy as np\n",
-    "import librosa\n",
-    "from keras.preprocessing.sequence import pad_sequences\n",
-    "import sklearn.metrics\n",
-    "import glob\n",
-    "import json\n",
-    "%matplotlib inline"
+    "# feature extraction \n",
+    "def extract_feature(path):\n",
+    "    \n",
+    "    X,_ = librosa.load(path)\n",
+    "    stft = librosa.amplitude_to_db(abs(librosa.stft(X)))\n",
+    "    mfcc = librosa.feature.mfcc(y=X, sr=rate, n_mfcc=13)\n",
+    "    chroma = librosa.feature.chroma_stft(y=X, sr=13)\n",
+    "    \n",
+    "    return stft,mfcc,chroma"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "RAV = r\"C:\\Users\\ratnd\\Desktop\\finalyr project\\ravdess\"\n",
+    "\n",
+    "path = RAV+\"\\\\Actor_08\\\\03-01-05-02-01-01-08.wav\"\n",
+    "stft,mfcc,chroma = extract_feature(path)"
    ]
   },
   {
@@ -66,7 +53,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
